add credentials for RETURN_PATH_EMAIL in prod, india, staging, and swiss. This will be used in a followup PR in commcrehq to manage Amazon SES bounces and complaints.

--- a/environments/india/public.yml
+++ b/environments/india/public.yml
@@ -61,6 +61,7 @@ root_email: commcarehq-ops+root@dimagi.com
 server_email: commcarehq-noreply@dimagi.com
 server_admin_email: commcarehq-ops+admins@dimagi.com
 default_from_email: commcarehq-noreply@dimagi.com
+return_path_email: commcarehq-bounces+india@dimagi.com
 support_email: support@dimagi.com
 probono_support_email: pro-bono@dimagi.com
 cchq_bug_report_email: commcarehq-bug-reports@dimagi.com
