--- a/src/commcare_cloud/ansible/group_vars/all.yml
+++ b/src/commcare_cloud/ansible/group_vars/all.yml
@@ -118,6 +118,7 @@ contact_email: info@example.com
 soft_assert_email: commcarehq-ops+soft_asserts@example.com
 daily_deploy_email: null
 check_s3_backups_email: null
+return_path_email: null
 
 
 AMAZON_S3_ACCESS_KEY: "{{ localsettings_private.AMAZON_S3_ACCESS_KEY | default(None) }}"
@@ -143,6 +144,7 @@ DROPBOX_SECRET: "{{ localsettings_private.DROPBOX_SECRET | default(None)}}"
 ELASTICSEARCH_PORT: 9200
 EMAIL_LOGIN: "{{ localsettings_private.EMAIL_LOGIN | default(None) }}"
 EMAIL_PASSWORD: "{{ localsettings_private.EMAIL_PASSWORD | default(None) }}"
+RETURN_PATH_EMAIL_PASSWORD: "{{ localsettings_private.RETURN_PATH_EMAIL_PASSWORD | default(None) }}"
 FORMPLAYER_INTERNAL_AUTH_KEY: "{{ localsettings_private.FORMPLAYER_INTERNAL_AUTH_KEY | default(None) }}"
 FULLSTORY_ID: "{{ localsettings_private.FULLSTORY_ID | default('', true)}}"
 GMAPS_API_KEY: "{{ localsettings_private.GMAPS_API_KEY | default('') }}"
