--- a/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
@@ -35,7 +35,7 @@ nginx_sites:
     - name: "$incremental_sync"
       variable: "$http_x_commcarehq_lastsynctoken"
       # If header is provided, rate limit on $server_name
-      default_value: "$server_name"
+      default_value: "$limit_bucket"
       var_mappings:
         # If the header is not provided, do not rate limit
         - key: '""'
