use limit bucket in all zones

--- a/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
@@ -46,15 +46,15 @@ nginx_sites:
       size: "10m"
       rate: "20r/s"
     - name: "overall_restore" # Limits all restores
-      zone: "$server_name"
+      zone: "$limit_bucket"
       size: "10m"
       rate: "20r/s"
     - name: "submissions"
-      zone: "$server_name"
+      zone: "$limit_bucket"
       size: "10m"
       rate: "200r/s"
     - name: "server_name"
-      zone: "$server_name"
+      zone: "$limit_bucket"
       size: "10m"
       rate: "30r/s"
     - name: "app_downloads"
