--- a/src/commcare_cloud/ansible/roles/nginx/vars/cchq_ssl.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/cchq_ssl.yml
@@ -24,7 +24,7 @@ nginx_sites:
    file_name: "{{ deploy_env }}_commcare"
    listen: "443 ssl http2{{ ' default_server' if deploy_env == primary_ssl_env else '' }}"
    root: "/var/www/html"
-   server_name: "{{ SITE_HOST }} {{ ALTERNATE_HOSTS }}"
+   server_name: "{{ SITE_HOST }}"
    client_max_body_size: 600m
    proxy_max_temp_file_size: 5120m
    proxy_set_headers:
