--- a/src/commcare_cloud/ansible/roles/rabbitmq/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/rabbitmq/tasks/main.yml
@@ -15,11 +15,14 @@
 
 - name: Place config file
   template:
-    src: "rabbitmq.config.j2"
-    dest: "/etc/rabbitmq/rabbitmq.config"
+    src: "{{ item.src }}"
+    dest: "/etc/rabbitmq/{{ item.dest }}"
     group: root
     owner: rabbitmq
     mode: 0644
+  loop:
+    - {"src": "rabbitmq.config.j2", "dest": "rabbitmq.config"}
+    - {"src": "rabbitmq-env.conf.j2", "dest": "rabbitmq-env.conf"}
 
 - name: Create directory for ulimt
   file:
