Add swap to jenkins_mobile_agent_2

--- a/environments/jenkins/inventory.ini
+++ b/environments/jenkins/inventory.ini
@@ -2,7 +2,7 @@
 jenkins.dimagi.com hostname=jenkins-server swap_size=1G
 
 [jenkins_mobile_agent_2]
-162.242.218.23 hostname=jenkins-mobile-agent-2
+162.242.218.23 hostname=jenkins-mobile-agent-2 swap_size=1G
 
 [jenkins:children]
 jenkins_server
