Setting master-slave replication and sentinel

--- a/src/commcare_cloud/ansible/deploy_db.yml
+++ b/src/commcare_cloud/ansible/deploy_db.yml
@@ -20,22 +20,13 @@
 - import_playbook: deploy_couchdb2.yml
 
 - name: Redis
-  hosts: redis
-  become: true
-  roles:
-    - {role: redis, tags: 'redis'}
+  import_playbook: deploy_redis.yml
 
 - name: Elasticsearch
   hosts: elasticsearch
   become: true
   roles:
     - {role: elasticsearch, tags: 'elasticsearch'}
-
-- name: Redis Monitoring
-  hosts: redis
-  become: true
-  roles:
-    - redis_monitoring
 
 - import_playbook: deploy_rabbitmq.yml
   tags:
