--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -235,7 +235,7 @@ localsettings:
   OBFUSCATE_PASSWORD_FOR_NIC_COMPLIANCE: True
   PILLOWTOP_MACHINE_ID: pil0
   REDIS_DB: '0'
-  REDIS_HOST: "{{ groups.redis_cluster_master.0 }}"
+  REDIS_HOST: "{{ hostvars[groups.keepalived_redis.0].keepalived_shared_ip }}" 
   REDIS_PORT: '6379'
   REPEATERS_WHITELIST: []  # disable all repeaters on ICDS
   REMINDERS_QUEUE_ENABLED: True
