--- a/src/commcare_cloud/ansible/roles/keepalived/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/keepalived/defaults/main.yml
@@ -11,3 +11,5 @@ keepalived_priority: "200"
 keepalived_backup_priority: "100"
 script_user: "root"
 notify_script_path: "/etc/keepalived/notify_script"
+check_process_script: "/etc/keepalived"
+keepalived_check_interval: 2
