--- a/src/commcare_cloud/ansible/deploy_airflow.yml
+++ b/src/commcare_cloud/ansible/deploy_airflow.yml
@@ -5,7 +5,7 @@
       assert:
         that: 
           - groups.airflow_scheduler |length == 1
-        fail_msg: "No of host in airflow group shouldn't exceed 1"
+        fail_msg: "Only 1 host is allowed in the airflow_scheduler group"
 
 - name: Airflow
   hosts: airflow
