Updated Airflow Docs (#3492)
* Updated Airflow Docs and roles.

--- a/src/commcare_cloud/ansible/roles/commcarehq/tasks/airflow.yml
+++ b/src/commcare_cloud/ansible/roles/commcarehq/tasks/airflow.yml
@@ -11,6 +11,7 @@
   register: airflow_webserver_conf_file
 
 - name: define airflow scheduler service
+  hosts: airflow_scheduler
   become: yes
   template:
     src: "../templates/supervisor_airflow_scheduler.conf.j2"
