--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -305,45 +305,45 @@ proxy_servers:
 
 rds_instances:
   - identifier: "pgmain0-production"
-    instance_type: "db.t2.xlarge"
+    instance_type: "db.t3.large"
     storage: 500
     multi_az: true
     engine_version: 9.6.15
 
   - identifier: "pgucr0-production"
-    instance_type: "db.t2.xlarge"
+    instance_type: "db.t3.large"
     storage: 500
     multi_az: true
     engine_version: 9.6.15
 
   - identifier: "pgshard1-production"
-    instance_type: "db.t2.large"
+    instance_type: "db.t3.medium"
     storage: 250
     multi_az: true
     engine_version: 9.6.15
   - identifier: "pgshard2-production"
-    instance_type: "db.t2.large"
+    instance_type: "db.t3.medium"
     storage: 250
     multi_az: true
     engine_version: 9.6.15
   - identifier: "pgshard3-production"
-    instance_type: "db.t2.large"
+    instance_type: "db.t3.medium"
     storage: 250
     multi_az: true
     engine_version: 9.6.15
   - identifier: "pgshard4-production"
-    instance_type: "db.t2.large"
+    instance_type: "db.t3.medium"
     storage: 250
     multi_az: true
     engine_version: 9.6.15
   - identifier: "pgshard5-production"
-    instance_type: "db.t2.large"
+    instance_type: "db.t3.medium"
     storage: 250
     multi_az: true
     engine_version: 9.6.15
 
   - identifier: "pgsynclog0-production"
-    instance_type: "db.t3.large"
+    instance_type: "db.t3.medium"
     storage: 1000
     multi_az: true
     engine_version: 9.6.15
