Bring pgsynclog0-production back to original size
This was the machine I was least sure about so I tried it for a day, and sure enough it seems to be low on memory and high on swap and even resulted in some postgres errors, so I'm reverting to the original size

--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -343,7 +343,7 @@ rds_instances:
     engine_version: 9.6.15
 
   - identifier: "pgsynclog0-production"
-    instance_type: "db.t3.medium"
+    instance_type: "db.t3.large"
     storage: 1000
     multi_az: true
     engine_version: 9.6.15
