--- a/environments/icds-cas/app-processes.yml
+++ b/environments/icds-cas/app-processes.yml
@@ -258,45 +258,45 @@ pillows:
     xform-pillow-non-dashboard:
       start_process: 0
       num_processes: 6
-      total_processes: 36
+      total_processes: 40
       processor_chunk_size: 50
     xform-pillow-dashboard:
       start_process: 0
       num_processes: 12
-      total_processes: 48
+      total_processes: 58
       processor_chunk_size: 100
   'pillow24':
     xform-pillow-non-dashboard:
       start_process: 6
       num_processes: 6
-      total_processes: 36
+      total_processes: 40
       processor_chunk_size: 50
     xform-pillow-dashboard:
       start_process: 12
       num_processes: 12
-      total_processes: 48
+      total_processes: 58
       processor_chunk_size: 100
   'pillow25':
     xform-pillow-non-dashboard:
       start_process: 12
       num_processes: 6
-      total_processes: 36
+      total_processes: 40
       processor_chunk_size: 50
     xform-pillow-dashboard:
       start_process: 24
       num_processes: 12
-      total_processes: 48
+      total_processes: 58
       processor_chunk_size: 100
   'pillow26':
     xform-pillow-non-dashboard:
       start_process: 18
       num_processes: 6
-      total_processes: 36
+      total_processes: 40
       processor_chunk_size: 50
     xform-pillow-dashboard:
       start_process: 36
       num_processes: 12
-      total_processes: 48
+      total_processes: 58
       processor_chunk_size: 100
   'pillow27':
     case-pillow-non-dashboard:
@@ -357,15 +357,25 @@ pillows:
     xform-pillow-non-dashboard:
       start_process: 24
       num_processes: 6
-      total_processes: 36
+      total_processes: 40 
       processor_chunk_size: 50
+    xform-pillow-dashboard:
+      start_process: 48
+      num_processes: 10
+      total_processes: 58
+      processor_chunk_size: 100
   'pillow33':
     xform-pillow-non-dashboard:
       start_process: 30
       num_processes: 6
-      total_processes: 36
+      total_processes: 40
       processor_chunk_size: 50    
   'pillow34':
+    xform-pillow-non-dashboard:
+      start_process: 36
+      num_processes: 4
+      total_processes: 40
+      processor_chunk_size: 50
   'pillow35':
   'pillow36':
   'pillow37':
