pg repack script, install and cron

--- a/src/commcare_cloud/ansible/deploy_postgres.yml
+++ b/src/commcare_cloud/ansible/deploy_postgres.yml
@@ -71,3 +71,11 @@
    - after-reboot
   roles:
     - role: thp
+
+- name: Install and configure pg_repack
+  hosts: "{{ pg_repack|list }}"
+  become: true
+  roles:
+    - role: pg_repack
+  tags:
+    pg_repack
