--- a/environments/icds-cas/postgresql.yml
+++ b/environments/icds-cas/postgresql.yml
@@ -1,5 +1,9 @@
 DEFAULT_POSTGRESQL_HOST: pgmain1
 
+pg_repack:
+  pgsynclog1:
+    - commcarehq_synclogs
+
 REPORTING_DATABASES:
   ucr: ucr
   icds-ucr-citus:
