--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 !/commcare-cloud-bootstrap/specs/example*.yml
 .generated.yml
 .generated-terraform
-!tests/postgresql_config/*/.generated.yml
+!tests/test_envs/*/.generated.yml
 tests/migration_config/plans/new_node/migration_build_env1_plan/
 tests/file_migration_data/.generated_data
 *.swp
