Add explicit RATE_LIMIT_SUBMISSIONS setting for saas rate limiting

--- a/environments/india/public.yml
+++ b/environments/india/public.yml
@@ -119,6 +119,7 @@ localsettings:
   INVOICE_STARTING_NUMBER: 5000
   J2ME_ADDRESS: "{{ J2ME_SITE_HOST }}"
   PILLOWTOP_MACHINE_ID: indiacloud
+  RATE_LIMIT_SUBMISSIONS: yes
   REDIS_DB: '0'
   REDIS_HOST: "{{ groups.redis.0 }}"
   REDIS_PORT: '6379'
