--- a/environments/staging/public.yml
+++ b/environments/staging/public.yml
@@ -108,6 +108,7 @@ localsettings:
   INVOICE_STARTING_NUMBER: 5000
   J2ME_ADDRESS: "{{ J2ME_SITE_HOST }}"
   PILLOWTOP_MACHINE_ID: staging-hqdb0-ubuntu
+  RATE_LIMIT_SUBMISSIONS: yes
   REDIS_DB: '0'
   REDIS_HOST: "{{ groups.redis.0 }}"
   REDIS_PORT: '6379'
