--- a/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/vars/cas_ssl.yml
@@ -12,6 +12,17 @@ nginx_sites:
       hosts: formplayer
       port: "{{ formplayer_port }}"
       method: "hash $cookie_sessionid consistent"
+   geo:
+    - name: "$limited"
+      mappings:
+      - key: "default"
+        value: 1
+      - key: '192.168.8.218' # Ben Talbot
+        value: 0
+      - key: '180.151.231.114' # Ashish
+        value: 0
+      - key: '120.56.84.164' # Sankalp
+        value: 0
    mappings:
     # Remove 'username' query param from request uri for use in cache key
     # https://stackoverflow.com/a/45587134
@@ -26,7 +37,21 @@ nginx_sites:
         # username is not first query param
         - key: '"~^(?P<path>[^?]*)\?(?P<args1>.*?)(&?username=[^&]*)(?P<args2>&?.*)?$"'
           value: '$path?$args1$args2'
-    - name: "$limit_bucket"
+    - name: "$global_limit"
+      variable: "$limited"
+      var_mappings:
+        - key: "1"
+          value: "$server_name"
+        - key: "0"
+          value: '""'
+    - name: "$per_ip_limit"
+      variable: "$limited"
+      var_mappings:
+        - key: "1"
+          value: "$binary_remote_addr"
+        - key: "0"
+          value: '""'
+    - name: "$global_limit"
       variable: "$remote_addr"
       default_value: "$server_name"
       var_mappings: # whitelisted IP addresses not to be rate-limited
@@ -48,7 +73,7 @@ nginx_sites:
     - name: "$incremental_sync"
       variable: "$http_x_commcarehq_lastsynctoken"
       # If header is provided, rate limit on $limit_bucket
-      default_value: "$limit_bucket"
+      default_value: "$global_limit"
       var_mappings:
         # If the header is not provided, do not rate limit
         - key: '""'
@@ -59,27 +84,27 @@ nginx_sites:
       size: "10m"
       rate: "20r/s"
     - name: "overall_restore" # Limits all restores
-      zone: "$limit_bucket"
+      zone: "$global_limit"
       size: "10m"
       rate: "20r/s"
     - name: "per_ip_restore"
-      zone: "$binary_remote_addr"
+      zone: "$per_ip_limit"
       size: "50m"
       rate: "2r/m"
     - name: "submissions"
-      zone: "$limit_bucket"
+      zone: "$global_limit"
       size: "10m"
       rate: "200r/s"
     - name: "server_name"
-      zone: "$limit_bucket"
+      zone: "$global_limit"
       size: "10m"
       rate: "30r/s"
     - name: "app_downloads"
-      zone: "$limit_bucket"
+      zone: "$global_limit"
       size: "10m"
       rate: "2r/s"
     - name: "multimedia"
-      zone: "$limit_bucket"
+      zone: "$global_limit"
       size: "10m"
       rate: "200r/s"
    proxy_cache_path:
