--- a/environments/india/public.yml
+++ b/environments/india/public.yml
@@ -202,3 +202,6 @@ localsettings:
 
 commcare_cloud_root_user: ubuntu
 commcare_cloud_pem: ~/.ssh/id_rsa
+
+airflow_dag_concurrency: 4
+airflow_parallelism: 8
