--- a/src/commcare_cloud/ansible/roles/airflow/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/airflow/defaults/main.yml
@@ -2,4 +2,5 @@ airflow_code_dir: "{{ airflow_home }}/pipes"
 airflow_dag_dir: "{{ airflow_home }}/dags"
 airflow_version: "master"
 airflow_repository: https://github.com/dimagi/pipes.git
-
+airflow_dag_concurrency: 16
+airflow_parallelism: 32
