Setting master-slave replication and sentinel (#3515)
* Setting master-slave replication and sentinel

--- a/src/commcare_cloud/ansible/roles/redis/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/redis/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - include: setup_cluster.yml
-  when: is_redis_cluster|bool
+  when: is_redis_cluster|bool and inventory_hostname in groups['redis_cluster_master']
 
 - name: start the redis service
   service: name="{{ redis_service_name }}" state=started enabled=yes
