--- a/src/commcare_cloud/ansible/deploy_couchdb2.yml
+++ b/src/commcare_cloud/ansible/deploy_couchdb2.yml
@@ -33,6 +33,7 @@
             - nocreate
             - notifempty
 
+              
 - name: Couchdb2 proxy
   hosts: couchdb2_proxy
   become: true
@@ -42,6 +43,14 @@
     - import_tasks: partials/couchdb2_proxy_haproxy.yml
       when: couchdb_use_haproxy|bool  
   tags: proxy 
-- name: Deploy keepalived  
-  import_playbook: deploy_keepalived.yml
+
+- name: deploy keepalived
+  hosts: couchdb2_proxy
+  become: true
+  vars:
+     keepalived_check_process: "pgrep haproxy"
+     keepalived_router_id: 52
+  roles:
+    - role: keepalived
+      when: groups.couchdb2_proxy |length == 2
   tags: proxy
