set ES default query timeout to 5 mins

--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -175,6 +175,7 @@ localsettings:
   EMAIL_SMTP_PORT: 26
   EMAIL_USE_TLS: yes
   ENABLE_SOFT_ASSERT_EMAILS: True
+  ES_SEARCH_TIMEOUT: 300
   IS_DIMAGI_ENVIRONMENT: True
   HQ_INSTANCE: 'icds'
   INACTIVITY_TIMEOUT: 20160
