--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -305,7 +305,7 @@ proxy_servers:
 
 rds_instances:
   - identifier: "pgmain0-production"
-    instance_type: "db.t3.large"
+    instance_type: "db.t3.xlarge"
     storage: 500
     multi_az: true
     engine_version: 9.6.15
