adding additional user and servers

--- a/environments/_users/icds-aws.yml
+++ b/environments/_users/icds-aws.yml
@@ -1,5 +1,8 @@
 dev_users:
   present:
     - dgadiraju
-    - rchilaka 
+    - rchilaka
+    - rkrushna
+    - amohammed
+    - sbaig 
   absent: []
