Default a few more emails to example.com
This then explicitly sets the values back to the dimagi.com addresses
for Dimagi managed envs.  This means that there shouldn't be any diff
next time localsettings is deployed on those envs.

--- a/environments/production/public.yml
+++ b/environments/production/public.yml
@@ -22,6 +22,9 @@ feedback_email: hq-feedback@dimagi.com
 eula_change_email: eula-notifications@dimagi.com
 contact_email: info@dimagi.com
 soft_assert_email: commcarehq-ops+soft_asserts@dimagi.com
+bug_report_email: commcarehq-support@dimagi.com
+new_domain_email: inquiries@dimagi.com
+exchange_email: exchange@dimagi.com
 ALTERNATE_HOSTS:
   - rec-mobile.sante.gov.bf
 
