--- a/environments/phi-cas/public.yml
+++ b/environments/phi-cas/public.yml
@@ -67,6 +67,9 @@ eula_change_email: eula-notifications@dimagi.com
 contact_email: info@dimagi.com
 soft_assert_email: commcarehq-ops+soft_asserts@dimagi.com
 check_s3_backups_email: commcarehq-ops+root@dimagi.com
+bug_report_email: commcarehq-support@dimagi.com
+new_domain_email: inquiries@dimagi.com
+exchange_email: exchange@dimagi.com
 
 TWO_FACTOR_GATEWAY_ENABLED: False
 
