--- a/environments/swiss/public.yml
+++ b/environments/swiss/public.yml
@@ -79,6 +79,9 @@ eula_change_email: eula-notifications@dimagi.com
 contact_email: info@dimagi.com
 soft_assert_email: commcarehq-ops+soft_asserts@dimagi.com
 check_s3_backups_email: commcarehq-ops+root@dimagi.com,httu.admin@swisstph.ch
+bug_report_email: commcarehq-support@dimagi.com
+new_domain_email: inquiries@dimagi.com
+exchange_email: exchange@dimagi.com
 
 TWO_FACTOR_GATEWAY_ENABLED: True
 
