--- a/src/commcare_cloud/ansible/group_vars/all.yml
+++ b/src/commcare_cloud/ansible/group_vars/all.yml
@@ -119,6 +119,9 @@ soft_assert_email: commcarehq-ops+soft_asserts@example.com
 daily_deploy_email: null
 check_s3_backups_email: null
 return_path_email: null
+bug_report_email: commcarehq-support@example.com
+new_domain_email: inquiries@example.com
+exchange_email: exchange@example.com
 
 
 ALTERNATE_HOSTS: []
