--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -291,6 +291,14 @@ servers:
     group: "postgresql"
     os: bionic
 
+  - server_name: "pgbouncer2-production"
+    server_instance_type: t3.2xlarge
+    network_tier: "db-private"
+    az: "a"
+    volume_size: 80
+    group: "postgresql"
+    os: bionic
+
 
 
 proxy_servers:
