Route all pg traffic through pgbouncer2-production

--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -47,6 +47,9 @@ mobile_webworkers
 [pgbouncer1]
 10.202.40.8 hostname=pgbouncer1-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 
+[pgbouncer2]
+10.202.40.59 hostname=pgbouncer2-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+
 [rds_pgmain0]
 pgmain0-production.cl9dmuo3ok4h.us-east-1.rds.amazonaws.com
 
@@ -84,6 +87,7 @@ rds_pgsynclog0
 [postgresql:children]
 pgproxy2
 pgbouncer1
+pgbouncer2
 remote_postgresql
 
 [ansible_skip:children]
