--- a/environments/production/postgresql.yml
+++ b/environments/production/postgresql.yml
@@ -30,38 +30,38 @@ pgbouncer_override:
 dbs:
   main:
     host: rds_pgmain0
-    pgbouncer_host: pgbouncer1
+    pgbouncer_host: pgbouncer2
   formplayer:
     host: rds_pgmain0
-    pgbouncer_host: pgbouncer1
+    pgbouncer_host: pgbouncer2
   ucr:
     host: rds_pgucr0
-    pgbouncer_host: pgbouncer1
+    pgbouncer_host: pgbouncer2
     query_stats: True
   synclogs:
     host: rds_pgsynclog0
-    pgbouncer_host: pgbouncer1
+    pgbouncer_host: pgbouncer2
   form_processing:
     proxy:
-      host: pgproxy2
+      host: pgbouncer2
     partitions:
       p1:
         shards: [0, 204]
         host: rds_pgshard1
-        pgbouncer_host: pgproxy2
+        pgbouncer_host: pgbouncer2
       p2:
         shards: [205, 409]
         host: rds_pgshard2
-        pgbouncer_host: pgproxy2
+        pgbouncer_host: pgbouncer2
       p3:
         shards: [410, 614]
         host: rds_pgshard3
-        pgbouncer_host: pgproxy2
+        pgbouncer_host: pgbouncer2
       p4:
         shards: [615, 819]
         host: rds_pgshard4
-        pgbouncer_host: pgproxy2
+        pgbouncer_host: pgbouncer2
       p5:
         shards: [820, 1023]
         host: rds_pgshard5
-        pgbouncer_host: pgproxy2
+        pgbouncer_host: pgbouncer2
