--- a/environments/icds-cas/elasticsearch.yml
+++ b/environments/icds-cas/elasticsearch.yml
@@ -7,3 +7,5 @@ settings:
     number_of_replicas: 2  # stored in triplicate
   smslogs:
     number_of_shards: 10
+  hqdomains:
+    number_of_shards: 1
