--- a/src/commcare_cloud/ansible/roles/datadog/vars/main.yml
+++ b/src/commcare_cloud/ansible/roles/datadog/vars/main.yml
@@ -4,15 +4,7 @@ datadog_parsers_dest: "{{ datadog_custom_dir }}/datadog-parsers"
 datadog_parsers:
   - input: "{{ log_home }}/{{ deploy_env }}-timing.log"
     python_file: "{{ datadog_parsers_dest }}/nginx/timings.py"
-    python_function: parse_nginx_timings
-    hosts: "{{ groups['proxy'] }}"
-  - input: "{{ log_home }}/{{ deploy_env }}-timing.log"
-    python_file: "{{ datadog_parsers_dest }}/nginx/timings.py"
-    python_function: parse_nginx_apdex
-    hosts: "{{ groups['proxy'] }}"
-  - input: "{{ log_home }}/{{ deploy_env }}-timing.log"
-    python_file: "{{ datadog_parsers_dest }}/nginx/timings.py"
-    python_function: parse_nginx_counter
+    python_function: parse_logs
     hosts: "{{ groups['proxy'] }}"
   - input: "{{ log_home }}/{{ deploy_env }}_commcare-nginx_error.log"
     python_file: "{{ datadog_parsers_dest }}/nginx/errors.py"
