--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -51,6 +51,12 @@ DATADOG_ENABLED: True
 datadog_extra_host_checks:
   - url: "https://{{ CAS_SITE_HOST }}/accounts/login/"
 
+datadog_custom_parsers:
+  - input: "{{ log_home }}/{{ deploy_env }}_cas-timing.log"
+    python_file: "{{ datadog_parsers_dest }}/nginx/timings.py"
+    python_function: parse_logs
+    hosts: "{{ groups['proxy'] }}"
+
 etc_hosts_lines:
   - '127.0.0.1        localhost'
   - '100.71.181.10		cas.commcarehq.org'
