--- a/src/commcare_cloud/ansible/roles/datadog/vars/main.yml
+++ b/src/commcare_cloud/ansible/roles/datadog/vars/main.yml
@@ -1,6 +1,7 @@
 datadog_custom_dir: "{{ cchq_home }}/datadog"
 datadog_parsers_repo: https://github.com/dimagi/datadog-parsers
 datadog_parsers_dest: "{{ datadog_custom_dir }}/datadog-parsers"
+datedog_parsers_version: 2f79c47039f717c54377910db7a463d5a5fb99ab
 datadog_parsers:
   - input: "{{ log_home }}/{{ deploy_env }}-timing.log"
     python_file: "{{ datadog_parsers_dest }}/nginx/timings.py"
