--- a/environments/india/public.yml
+++ b/environments/india/public.yml
@@ -30,6 +30,20 @@ nameservers:
   - 8.8.8.8
   - 8.8.4.4
 
+filebeat_inputs:
+  - type: log
+    paths:
+      - "{{ log_home }}/{{ deploy_env }}_commcare-nginx_error.log"
+    fields:
+      type: nginx-timing
+    fields_under_root: true
+  - type: log
+    paths:
+      - "{{ log_home }}/{{ deploy_env }}-timing.log"
+    fields:
+      type: nginx-error
+    fields_under_root: true
+
 kafka_log_dir: "{{ encrypted_root }}/kafka"
 
 control_machine_ip: 10.162.36.196
