--- a/environments/india/terraform.yml
+++ b/environments/india/terraform.yml
@@ -199,7 +199,7 @@ servers:
 
 proxy_servers:
   - server_name: "proxy1-india"
-    server_instance_type: "t3.small"
+    server_instance_type: "t3.medium"
     network_tier: "public"
     az: "a"
     volume_size: 80
