--- a/changelog/0032-upgrade-elasticsearch.yml
+++ b/changelog/0032-upgrade-elasticsearch.yml
@@ -43,7 +43,7 @@ update_steps: |
 
   5. Perform a synced flush
   ```bash
-  curl -X POST ""<ES-IP>:9200/_flush/synced?pretty"
+  curl -X POST "<ES-IP>:9200/_flush/synced?pretty"
   ```
     
   6. Stop the Monit and Elasticsearch services
