--- a/changelog/0032-upgrade-to-elasticsearch-2.4.6.yml
+++ b/changelog/0032-upgrade-to-elasticsearch-2.4.6.yml
@@ -66,40 +66,44 @@ update_steps: |
   commcare-cloud ${ENV} run-shell-command all "service elasticsearch stop" -b --limit=elasticsearch
   ```
 
-  7. Install and run the new version of Elasticsearch
+  7. Make a backup of the 1.7.6 data directory. The following is one way that you can do that:
+  ```bash
+  commcare-cloud ${ENV} run-shell-command all "cp -r /opt/data/elasticsearch-1.7.6 /opt/data/elasticsearch-1.7.6-backup" -b --limit=elasticsearch
+  ```
+
+  8. Install and run the new version of Elasticsearch
   ```bash
   commcare-cloud ${ENV} ansible-playbook deploy_stack.yml --limit=elasticsearch --tags=elasticsearch
   ```
 
-  8. Stop the Monit and Elasticsearch services
+  9. Stop the Monit and Elasticsearch services
   ```bash
   commcare-cloud ${ENV} run-shell-command all "service monit stop" -b --limit=elasticsearch
   commcare-cloud ${ENV} run-shell-command all "service elasticsearch stop" -b --limit=elasticsearch
   ```
 
-  9. Rename the newly created 2.4.6 data directory so it's out of the way, and make a backup of the 1.7.6 data directory, and then move it to the new 2.4.6 data directory location
+  10. Rename the newly created 2.4.6 data directory so it's out of the way and then move the 1.7.6 data directory to the new 2.4.6 data directory location
   ```bash
   commcare-cloud ${ENV} run-shell-command all "mv /opt/data/elasticsearch-2.4.6 /opt/data/elasticsearch-2.4.6-new-installation" -b --limit=elasticsearch
-  commcare-cloud ${ENV} run-shell-command all "cp -r /opt/data/elasticsearch-1.7.6 /opt/data/elasticsearch-1.7.6-backup" -b --limit=elasticsearch
   commcare-cloud ${ENV} run-shell-command all "mv /opt/data/elasticsearch-1.7.6 /opt/data/elasticsearch-2.4.6" -b --limit=elasticsearch
   ```
-  10. Verify the permissions and size of the data directory
+  11. Verify the permissions and size of the data directory
   ```bash
   commcare-cloud ${ENV} run-shell-command all "du -ch /opt/data/elasticsearch-2.4.6" -b --limit=elasticsearch
   ```
 
-  11. Start the Monit and Elasticsearch services
+  12. Start the Monit and Elasticsearch services
   ```bash
   commcare-cloud ${ENV} run-shell-command all "service monit start" -b --limit=elasticsearch
   commcare-cloud ${ENV} run-shell-command all "service elasticsearch start" -b --limit=elasticsearch
   ```
 
-  12. Verify that the cluster status is yellow
+  13. Verify that the cluster status is yellow
   ```bash
   curl -XGET "${ES_HOST}:9200/_cluster/health?pretty"
   ```
 
-  12. Enable the cluster routing
+  14. Enable the cluster routing
   ```bash
   curl -X PUT "${ES_HOST}:9200/_cluster/settings?pretty" -H 'Content-Type: application/json' -d'
   {
@@ -110,7 +114,7 @@ update_steps: |
   '
   ```
 
-  14. Start the site
+  15. Start the site
   ```bash
   commcare-cloud ${ENV} downtime end
   ```
