--- a/src/commcare_cloud/ansible/encrypt_dir.yml
+++ b/src/commcare_cloud/ansible/encrypt_dir.yml
@@ -1,6 +1,6 @@
 ---
-- name: Check for already mounted encrypted wal drive
-  shell: grep '{{ encrypted_wal_archive }} ecryptfs' /etc/mtab
+- name: Check for already mounted encrypted {{ dir_path }}
+  shell: grep '{{ dir_path }} ecryptfs' /etc/mtab
   register: mtab_contents
   failed_when: false
   changed_when: false
@@ -8,7 +8,7 @@
   tags:
     - mount-ecryptfs
     - after-reboot
-    - wal-encrypt
+    - dir-encrypt
 
 - name: Install ecryptfs-utils
   become: yes
@@ -16,22 +16,22 @@
   # Do not install ecryptfs utils if already mounted. This should trigger alarm
   # bells if something causes a false positive result on checking for encrypted
   # volume is already mounted.
-  when: encrypted_wal_archive not in mtab_contents.stdout
+  when: dir_path not in mtab_contents.stdout
 
 - name: Add encryption password to keyring
   become: yes
   shell: 'printf "%s" "{{ ECRYPTFS_PASSWORD }}" | ecryptfs-add-passphrase | grep -o "\[.*\]" | sed "s/\[//g;s/\]//g"'
   register: password_hash
-  when: encrypted_wal_archive not in mtab_contents.stdout
+  when: dir_path not in mtab_contents.stdout
   tags:
     - mount-ecryptfs
     - after-reboot
-    - wal_encrypt
+    - dir-encrypt
 
-- name: Create {{encrypted_wal_archive}} to use for as tmp directory.
+- name: Create {{ dir_path}} to use for as tmp directory.
   become: yes
   file:
-    path: "{{ encrypted_wal_archive }}"
+    path: "{{ dir_path }}"
     mode: "u=rwx,g=rwx,o=rx"
     state: directory
     owner: cchq
@@ -40,21 +40,21 @@
   tags:
     - mount-ecryptfs
     - after-reboot
-    - wal-encrypt
+    - dir-encrypt
 
-- name: Mount wal drive
+- name: Mount {{ dir_path }} drive
   become: yes
   shell: "mount -t ecryptfs -o key=passphrase:passphrase_passwd={{ ECRYPTFS_PASSWORD }},user,noauto,ecryptfs_cipher=aes,ecryptfs_key_bytes=32,ecryptfs_unlink_sigs,ecryptfs_enable_filename_crypto=y,ecryptfs_fnek_sig={{ password_hash.stdout }},verbosity=0 {{ encrypted_wal_archive }}/ {{ encrypted_wal_archive }}/"
-  when: (password_hash.stdout is defined) and ( encrypted_wal_archive not in mtab_contents.stdout )
+  when: (password_hash.stdout is defined) and ( dir_path not in mtab_contents.stdout )
   tags:
     - mount-ecryptfs
     - after-reboot
-    - wal-encrypt
+    - dir-encrypt
 
 - name: Drop unencrypted readme in directory
   become: yes
   lineinfile:
-    dest: "{{ encrypted_wal_archive }}/README"
+    dest: "{{ dir_path }}/README"
     line: 'If you can read this file the directory is unencrypted'
     create: yes
     owner: root
@@ -62,5 +62,5 @@
     mode: 0770
   tags: 
     - mount-ecryptfs
-    - wal-encrypt
+    - dir-encrypt
 
