--- a/environments/icds-cas/app-processes.yml
+++ b/environments/icds-cas/app-processes.yml
@@ -218,12 +218,17 @@ celery_processes:
       pooling: gevent
       concurrency: 10
       num_workers: 2
+      
   celery70,celery71: 
     send_report_throttled:
       concurrency: 2
       pooling: gevent
       num_workers: 2
+    submission_reprocessing_queue:
+      concurrency: 6
   celery72,celery73:
+    submission_reprocessing_queue:
+      concurrency: 10
 pillows:
   'pillow21':
     # Catch all server for low volume pillows
